--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "Carolans",
         "colada",
         "demerara",
+        "Fresca",
+        "Houghton",
         "Piña",
         "turbinado"
     ]
