added a classic frozen marg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,10 @@
         "colada",
         "demerara",
         "Fresca",
+        "Hornitos",
         "Houghton",
         "Piña",
+        "Tajin",
         "turbinado"
     ]
 }
