added instructions for some finicky ingredients that I have documented over the years

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "json.schemas": [
         {
             "fileMatch": [
+                "/ingredients/*.json",
                 "/recipes/*.json"
             ],
             "url": "./schema/recipe.schema.json"
