added lemon drop shot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Fresca",
         "Hornitos",
         "Houghton",
+        "Limoncello",
         "Piña",
         "Tajin",
         "Titos",
