added a basic mint mojito recipe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "Hornitos",
         "Houghton",
         "Limoncello",
+        "Mojito",
         "Piña",
         "Tajin",
         "Titos",
