added support for recipes in YAML (same schema) and migrated bloody mary from JSON to YAML as test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,12 @@
             "url": "./schema/recipe.schema.json"
         }
     ],
+    "yaml.schemas": {
+        "./schema/recipe.schema.json": [
+            "/ingredients/*.yaml",
+            "/recipes/*.yaml"
+        ]
+    },
     "cSpell.words": [
         "barspoon",
         "burbon",
