created a notecard generator using pygame and img2pdf

--- a/recipes/BloodyMary.yaml
+++ b/recipes/BloodyMary.yaml
@@ -12,10 +12,10 @@ ingredients:
     suggested: Titos
   - quantity: 4
     unit: ounce
-    ingredient: Mr and Mrs T's Bold Bloody Mary Mix
+    ingredient: Mr and Mrs T's bold bloody mary mix
   - quantity: 4
     unit: ounce
-    ingredient: Zing Zang Bloody Mary Mix
+    ingredient: Zing Zang bloody mary mix
   - quantity: 0.5
     unit: ounce
     ingredient: pickle juice
