added a new, required version number to recipes

--- a/recipes/BloodyMary.yaml
+++ b/recipes/BloodyMary.yaml
@@ -1,4 +1,5 @@
 title: Bloody Mary
+version: 1
 description: >-
   The timeless classic.  There are so many right ways to make this that I hesitate to write this recipe down.
   With that said, here's how I like to make this.  And yes, I like to use pre-mix.  Sorry, not sorry.
