--- a/recipes/FrozenMargarita.yaml
+++ b/recipes/FrozenMargarita.yaml
@@ -1,4 +1,5 @@
 title: Frozen Margarita
+version: 2
 description: >-
   The classic cocktail.  This is the recipe from scratch, though there's no shame in using a decent quality premix,
   IMHO.
