--- a/recipes/PinaColada.yaml
+++ b/recipes/PinaColada.yaml
@@ -1,5 +1,5 @@
 title: Pina Colada
-version: 1
+version: 2
 description: The classic standard vacation drink.
 source: https://www.foodnetwork.com/recipes/pina-colada-recipe0-1956362
 preparation: blended
@@ -20,16 +20,17 @@ ingredients:
   ingredient: cream of coconut
 - quantity: 1.5
   unit: ounce
-  ingredient: white rum
+  ingredient: coconut rum
+  suggested: Malibu
 - quantity: 1
   unit: ounce
   ingredient: dark rum
+  suggested: Myers's
 - quantity: 2
   ingredient: pineapple wedges
   notes: for garnish
 instructions:
-- Combine the ice, frozen pineapple, pineapple juice, cream of coconut, and rums in
-  a blender.
+- Combine the ice, frozen pineapple, pineapple juice, cream of coconut, and rums in a blender.
 - Blend until smooth and frosty.
 - Divide into two glasses.
 - Garnish with pineapple wedge and serve with a straw.
