added improved whickey cocktail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Houghton",
         "Limoncello",
         "Mojito",
+        "Peychaud’s",
         "Piña",
         "Tajin",
         "Titos",
