added falernum syrup in preparation for tiki drinks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Carolans",
         "colada",
         "demerara",
+        "Falernum",
         "Fresca",
         "Hornitos",
         "Houghton",
