reattributed the dirty martini to it's rightful author

--- a/recipes/DirtyMartini.yaml
+++ b/recipes/DirtyMartini.yaml
@@ -1,8 +1,7 @@
 title: Dirty Martini
 version: 1
 description: Not exactly a traditional dirty martini, but rather the way that I and my family like them.
-author: Jared Julien
-source: Adam Webb
+author: Adam Webb
 notes: Props to my brother-in-law Adam for this specific twist (pun intended) on a dirty martini.
 yield: 1
 preparation: shaken
