reworked glassware a bit to group "rocks" and "old fashioned" into "lowball"

--- a/recipes/DirtyMartini.yaml
+++ b/recipes/DirtyMartini.yaml
@@ -6,7 +6,7 @@ notes: Props to my brother-in-law Adam for this specific twist (pun intended) on
 yield: 1
 preparation: shaken
 served: on the rocks
-glass: rocks
+glass: lowball
 ingredients:
 - quantity: 2.5
   unit: ounce
