--- a/recipes/OldFashioned.yaml
+++ b/recipes/OldFashioned.yaml
@@ -5,7 +5,7 @@ source: https://www.youtube.com/watch?v=mf1ax7y0yyI
 yield: 1
 preparation: built
 served: on a rock
-glass: old fashioned
+glass: lowball
 ingredients:
 - quantity: 2
   unit: ounce
