--- a/recipes/OldPal.yaml
+++ b/recipes/OldPal.yaml
@@ -5,7 +5,7 @@ source: https://www.sidewalkshoes.com/old-pal
 yield: 1
 preparation: stirred
 served: on a rock
-glass: rocks
+glass: lowball
 ingredients:
 - quantity: 1.5
   unit: ounce
