--- a/recipes/PinaColada.yaml
+++ b/recipes/PinaColada.yaml
@@ -3,7 +3,7 @@ version: 2
 description: The classic standard vacation drink.
 source: https://www.foodnetwork.com/recipes/pina-colada-recipe0-1956362
 preparation: blended
-glass: pina colada
+glass: hurricane
 yield: 2
 ingredients:
 - quantity: 1.5
