--- a/recipes/PlantersPunch.yaml
+++ b/recipes/PlantersPunch.yaml
@@ -5,7 +5,7 @@ description: A refreshing cross between an old fashioned and a daiquiri.
 yield: 1
 preparation: shaken
 served: on crushed ice
-glass: rocks
+glass: lowball
 ingredients:
 - quantity: 3
   unit: ounce
