--- a/recipes/ImprovedWhiskeyCocktail.yaml
+++ b/recipes/ImprovedWhiskeyCocktail.yaml
@@ -4,7 +4,7 @@ author: Greg Titian
 source: https://www.youtube.com/watch?v=X-36v2b0Pn8&t=1772s
 description: A complicated Old Fashioned.  Perhaps a New-Fashioned?
 preparation: stirred
-glass: old fashioned
+glass: lowball
 served: on a rock
 yield: 1
 ingredients:
