--- a/recipes/MaiTai.yaml
+++ b/recipes/MaiTai.yaml
@@ -5,7 +5,7 @@ source: https://www.delish.com/cooking/recipe-ideas/a43402365/classic-mai-tai-re
 yield: 1
 preparation: shaken
 served: on crushed ice
-glass: rocks
+glass: highball
 ingredients:
 - quantity: 1
   unit: ounce
