--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pygame = "^2.5.0"
 pyyaml = "^6.0.1"
 pillow = "^10.0.0"
 img2pdf = "^0.4.4"
+click = "^8.1.7"
 
 [tool.poetry.scripts]
 notecard = "notecard.generate:main"
