--- a/recipes/MaiTai.yaml
+++ b/recipes/MaiTai.yaml
@@ -21,7 +21,7 @@ ingredients:
   ingredient: orgeat syrup
 - quantity: 0.5
   unit: ounce
-  ingredient: dark dum
+  ingredient: dark rum
 - ingredient: mint sprig, lime wheel, and/or Maraschino cherry
   notes: for garnish
 instructions:
