renamed packing tool to cocktails - planning to add more commands and functioanlity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 packages = [
     { include = "notecard" },
-    { include = "packing" }
+    { include = "cocktails" }
 ]
 
 [tool.poetry.dependencies]
