minor tweaks to recipe to make ingredient naming more consistent

--- a/recipes/FrozenMargarita.yaml
+++ b/recipes/FrozenMargarita.yaml
@@ -23,21 +23,21 @@ ingredients:
   unit: cup
   ingredient: ice
 - quantity: 2
-  ingredient: lime wedge
+  ingredient: lime wheel
   notes: for rimming and garnish
-- ingredient: kosher salt or Tajin
+- ingredient: kosher salt
   notes: for rimming glass
 - quantity: 2
   unit: ounce
   ingredient: Ancho Reyes chili liquor
   notes: optional, but tasty floater
 instructions:
-  - Run lime wedge around rim of two glasses.
-  - Roll rim in kosher salt or Tajin.
-  - Combine tequila, lime juice, triple sec, and simple syrup in blender and blend until smooth.
-  - Transfer to prepared glasses.
-  - Optionally, float 1 ounce of Ancho liquor on each glass (do not stir).
-  - Add a straw and serve.
+- Run lime wedge around rim of two glasses.
+- Roll rim in kosher salt (or Tajin).
+- Combine tequila, lime juice, triple sec, and simple syrup in blender and blend until smooth.
+- Transfer to prepared glasses.
+- Optionally, float 1 ounce of Ancho liquor on each glass (do not stir).
+- Add a straw and serve.
 notes: |-
   - Single servings work fine in a personal blender - just halve the ingredients.
   - A rim of Tajin, rather than salt, is a very nice change.
