--- a/recipes/MintMojito.yaml
+++ b/recipes/MintMojito.yaml
@@ -16,7 +16,7 @@ ingredients:
   ingredient: simple syrup
 - quantity: 2
   unit: ounce
-  ingredient: white rum
+  ingredient: light rum
 - quantity: 0.75
   unit: ounce
   ingredient: lime juice
