completed the show method to display a recipe in the terminal

--- a/ingredients/Falernum.yaml
+++ b/ingredients/Falernum.yaml
@@ -1,32 +1,32 @@
 title: Falernum Syrup
 version: 1
 source: https://www.seriouseats.com/homemade-falernum-for-tiki-drinks-almond-clove-lime-syrup-recipe
-description: A difficult to find yet common tiki drink ingredient that is not to be confused with velvet falernum.
+description: A difficult to find yet common tiki drink ingredient, this earthy syrup adds a lot of depth to a drink.
 ingredients:
-  - quantity: 0.333333
-    unit: cup
-    ingredient: sliced raw almonds
-  - quantity: 30
-    ingredient: whole cloves
-  - quantity: 0.5
-    unit: cup
-    ingredient: light rum
-  - quantity: 8
-    ingredient: limes
-  - quantity: 0.6666667
-    unit: cup
-    ingredient: water
-  - quantity: 0.5
-    unit: cup
-    ingredient: sugar
+- quantity: 0.333333
+  unit: cup
+  ingredient: sliced raw almonds
+- quantity: 30
+  ingredient: whole cloves
+- quantity: 0.5
+  unit: cup
+  ingredient: light rum
+- quantity: 8
+  ingredient: limes
+- quantity: 0.6666667
+  unit: cup
+  ingredient: water
+- quantity: 0.5
+  unit: cup
+  ingredient: sugar
 instructions:
-  - Preheat oven to 400F.
-  - Toast almonds on a rimmed baking sheet until slightly darkened and fragrant, about 5 minutes.  Let cool.
-  - Place almonds and cloves in a sealable glass jar and pour in rum.Shake and let steep for 2 days.
-  - Zest all 8 limes (no pith) and add to jar (and additional spices, if desired) and steep 1 more days.
-  - Strain mixture through cheesecloth, pressing to extract as much liquid as possible.
-  - Juice **4** limes and strain juice into pot and add water and sugar.
-  - Bring to a boil over medium heat and cook just until sugar is dissolved.
-  - Let cool then combine with almond and clove infusion.
-  - Strain through a coffee filter, if desired, and let rest 12 hours before using.
+- Preheat oven to 400F.
+- Toast almonds on a rimmed baking sheet until slightly darkened and fragrant, about 5 minutes.  Let cool.
+- Place almonds and cloves in a sealable glass jar and pour in rum.Shake and let steep for 2 days.
+- Zest all 8 limes (no pith) and add to jar (and additional spices, if desired) and steep 1 more days.
+- Strain mixture through cheesecloth, pressing to extract as much liquid as possible.
+- Juice **4** limes and strain juice into pot and add water and sugar.
+- Bring to a boil over medium heat and cook just until sugar is dissolved.
+- Let cool then combine with almond and clove infusion.
+- Strain through a coffee filter, if desired, and let rest 12 hours before using.
 notes: Falernum is best used within a month and does not need to be refrigerated.
