--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,11 +5,11 @@
                 "/ingredients/*.json",
                 "/recipes/*.json"
             ],
-            "url": "./schema/recipe.schema.json"
+            "url": "./cocktails/schema/recipe.schema.json"
         }
     ],
     "yaml.schemas": {
-        "./schema/recipe.schema.json": [
+        "./cocktails/schema/recipe.schema.json": [
             "/ingredients/*.yaml",
             "/recipes/*.yaml"
         ]
