made search function look for recipes with potentially missing ingredients

--- a/recipes/MaiTai.yaml
+++ b/recipes/MaiTai.yaml
@@ -15,7 +15,7 @@ ingredients:
   ingredient: light rum
 - quantity: 0.75
   unit: ounce
-  ingredient: dry curaçao
+  ingredient: dry curacao
 - quantity: 0.75
   unit: ounce
   ingredient: orgeat syrup
